--- a/skud/quantum/templates/skud/views/navbar.html
+++ b/skud/quantum/templates/skud/views/navbar.html
@@ -13,17 +13,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/users_list">Сотрудники</a>
+                    <a class="nav-link {% if request.path == '/users_list' %}active{% endif %}" aria-current="page" href="/users_list">Сотрудники</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/device_list">Устройства</a>
+                    <a class="nav-link {% if request.path == '/device_list' %}active{% endif %}" href="/device_list">Устройства</a>
                 </li>
 
                 <li class="nav-item">
-                        <li class="nav-item"><a class="nav-link" href="/access_control">Контроль доступа</a></li>
+                        <a class="nav-link {% if request.path == '/access_control' %}active{% endif %}" href="/access_control">Контроль доступа</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/reports">Отчеты</a>
+                    <a class="nav-link {% if request.path == '/reports' %}active{% endif %}" href="/reports">Отчеты</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Система</a>
