--- a/skud/quantum/templates/skud/views/users_list.html
+++ b/skud/quantum/templates/skud/views/users_list.html
@@ -1,5 +1,5 @@
 {% extends 'skud/base.html' %}
-
+{% block 'navbar' %}active{% endblock %}
 {% block title %}
     Список Сотрудников
 {% endblock %}
