--- a/skud/quantum/templates/skud/views/reports/report.html
+++ b/skud/quantum/templates/skud/views/reports/report.html
@@ -32,10 +32,12 @@
         <div class="col">
             <select class="form-select" name="filter" required>
                 <option  disabled>Выберите фильтр отчета</option>
-                <option value="1" selected>Протокол проходов</option>
+                <option value="5" selected>Протокол проходов</option>
+                <option value="1">График сотрудников</option>
                 <option value="2">Список опоздавших</option>
                 <option value="3">Ранний уход</option>
                 <option value="4">Отсутвующие</option>
+                <option value="6">Часов работал</option>
             </select>
         </div>
         <div class="col">
